glibc (2.3.1-6) unstable; urgency=low

  * Daniel Jacobowitz <dan@debian.org>
    - Update glibc23-ctype-compat.patch to fix segfaults in old static
      binaries (Closes: #171451).

 -- Daniel Jacobowitz <dan@debian.org>  Mon,  2 Dec 2002 17:26:38 -0500

glibc (2.3.1-5) unstable; urgency=low

  * This is the "Leonids" release.
  
  * Jeff Bailey <jbailey@nisa.net>
    - debian/packages.d/libc-udeb.mk: Do not rename file to SONAME if it's
      a symlink.  Needed for hurd-i386.
    - debian/patches/signal-texi.dpatch: New file to remove link to
      linuxthreads manual.  Needed for hurd-i386.

    Welcome back, hppa:
    
    - debian/patches/glibc23-00-hppa-pthreads.dpatch
    - debian/patches/glibc23-01-hppa-dl-machine.dpatch
    - debian/patches/glibc23-02-hppa-min-kern-unwind-fde.dpatch
    - debian/patches/glibc23-03-hppa-mcontext.dpatch
    - debian/patches/glibc23-04-hppa-fcntl64.dpatch
    - debian/patches/glibc23-05-hppa-buildhack.dpatch
    - debian/patches/glibc23-06-hppa-tests.dpatch
    - debian/patches/glibc23-07-hppa-atomicity.dpatch
    - debian/patches/glibc23-08-hppa-configure.dpatch
    Thanks to Carlos O'Donell for these!

    - debian/control.in/libc-udeb: Remove missing trailing blank line.
    Thanks to Tollef Fog Heen.  Closes: #169342
    - debian/control.in/s390x: Remove missing trailing blank line.
    Thanks to Gerhard Tonn.

    - debian/libc/DEBIAN/postinst: Fix error in apache2 restart logic.
    Thanks to Carlos O'Donell.

    - debian/packages.d/libc-dev.mk: Fix missing tabs from s390x section.
    - debian/patches/s390-types.dpatch: New file to fix __ssize_t
    Thanks to Gerhard Tonn for these.

    - debian/packages.d/libc-udeb.mk: use DEB_HOST_ARCH, not DEB_BUILD_ARCH
      for determining package name.  Fixes cross-compilation case.

    - debian/patches/0list: Update for above

 -- Jeff Bailey <jbailey@nisa.net>  Mon, 18 Nov 2002 23:12:47 -0500

glibc (2.3.1-4) unstable; urgency=low

  * Daniel Jacobowitz <dan@debian.org>