@@ -103,6 +103,7 @@ endif
 
 	cp -a debian/$@/* $(tmpdir)/$@
 
+	find $(tmpdir)/$@ -name CVS -print -prune | xargs --no-run-if-empty rm -rf
 	dpkg-gencontrol -isp -p$@ -P$(tmpdir)/$@ $(libc_control_flags) \
 		-DProvides="$(shell perl debian/debver2localesdep.pl $(DEBVERSION))"
 	chown -R root.root $(tmpdir)/$@
