@@ -3,6 +3,8 @@ glibc (2.3.1-6) unstable; urgency=low
   * Daniel Jacobowitz <dan@debian.org>
     - Update glibc23-ctype-compat.patch to fix segfaults in old static
       binaries (Closes: #171451).
+    - Allow building from the CVS checkout without getting CVS dirs in the
+      resulting packages.  Whew.
 
  -- Daniel Jacobowitz <dan@debian.org>  Mon,  2 Dec 2002 17:26:38 -0500
 
